fixed spacing of nav

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,10 @@ nav a {
     font-weight: 700;
 }
 
+nav ul {
+    padding: 0px;
+}
+
 /************************
 FOOTER
 *************************/
